--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="add">Save this spot</string>
     <string name="title">Title App</string>
     <string name="nearest">"Nearest Spot"</string>
+    <string name="temp_at_1200_5_c">Temp (at 1200): 5°C</string>
+    <string name="chance_of_sunshine_98">Chance of sunshine: 98%</string>
+    <string name="min_temp_10_c">Min temp = 10 °C</string>
+    <string name="max_temp_10_c">Max temp = 10 °C</string>
+    <string name="chance_of_snowfall">Chance of snowfall:</string>
 </resources>
