Working on google sign in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,24 @@
 <resources>
-    <string name="app_name">Snow</string>
+    <string name="app_name">PG</string>
     <string name="instructions">Search for a city or town below to get the snow forecast from the nearest ski resort</string>
     <string name="city">City</string>
     <string name="search">Search</string>
-    <string name="saved">See saved spots</string>
-    <string name="add">Save this spot</string>
-    <string name="title">Title App</string>
+    <string name="saved">Saved spots</string>
+    <string name="add">Save</string>
+    <string name="title">Powder Guru</string>
     <string name="nearest">"Nearest Spot"</string>
     <string name="temp_at_1200_5_c">Temp (at 1200): 5°C</string>
     <string name="chance_of_sunshine_98">Chance of sunshine: 98%</string>
     <string name="min_temp_10_c">Min temp = 10 °C</string>
     <string name="max_temp_10_c">Max temp = 10 °C</string>
     <string name="chance_of_snowfall">Chance of snowfall:</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <string name="sign_in">Sign In</string>
+    <string name="create_account">Create Account</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="emailpassword_title_text">Email and Password</string>
+    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
